[gd_scene load_steps=3 format=3 uid="uid://bm74bnyjhhnkt"]

[ext_resource type="PackedScene" uid="uid://ctvloyl0xskon" path="res://characters/TouchBlue.tscn" id="1_43ekh"]
[ext_resource type="Script" path="res://player/player.gd" id="2_xgey4"]

[node name="TouchBlue" groups=["player"] instance=ExtResource("1_43ekh")]
script = ExtResource("2_xgey4")
speed = 3.0
ataque_1 = 100
ataque_2 = 110
health = 200
max_health = 200
death_prefab = null
ritu_scene = null

[node name="CollisionShape2D" parent="." index="1"]
visible = false

[node name="SwordArea" parent="." index="3"]
visible = true
position = Vector2(10, 1)
scale = Vector2(3.48, 1.16)

[node name="HealthProgressBar" parent="." index="4"]
unique_name_in_owner = true

[node name="DamageDigitMarker" parent="." index="5"]
unique_name_in_owner = true

[node name="VoiceBox" parent="." index="6"]
playbacks = Array[AudioStreamMP3]([])
